# Dify-Assistant

./: .gitignore  CHANGELOG.md  LICENSE  README.md  app-sample.toml  pyproject.toml
dify_assistant/: __init__.py  constants.py  logging.py
dify_assistant/api/: __init__.py  base.py  chat.py  completion.py  conversation.py  dify_client.py  file.py  workflow.py
dify_assistant/cli/: __init__.py  app_cmd.py  async_console_client.py  console_client.py  main.py  plugin_cmd.py  utils.py
dify_assistant/client/: __init__.py  async_client.py  base.py  sync_client.py
dify_assistant/config/: __init__.py  app.py  dify_server.py  loader.py
dify_assistant/exceptions/: __init__.py  errors.py
dify_assistant/models/: __init__.py  common.py
dify_assistant/models/request/: __init__.py  chat.py  completion.py  feedback.py  stop.py  workflow.py
dify_assistant/models/response/: __init__.py  chat.py  completion.py  feedback.py  stop.py  workflow.py
dify_assistant/streaming/: __init__.py  events.py  sse_parser.py
docs/: cli-design.md  user-guide.md
scripts/: lint.sh
tests/cli/: test_async_console_client.py  test_console_client.py
tests/client/: test_base.py
tests/config/: test_loader.py
tests/exceptions/: __init__.py  test_errors.py
tests/streaming/: test_sse_parser.py
