[project]
authors = [{ name = "webclerk", email = "webclerk@gmail.com" }]
maintainers = [{ name = "webclerk", email = "webclerk@gmail.com" }]
name = "dify-assistant"
version = "2025.1.1.20251210"
description = "Dify Assistant"
keywords = ["Dify"]

license = "Apache-2.0"
readme = { file = "README.md", content-type = "text/markdown" }

classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
]

requires-python = ">=3.11,<3.15"

dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic[email]>=2.12.5",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "hatchling>=1.28.0",
    "isort>=7.0.0",
    "mypy>=1.19.0",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.8",
    "twine>=6.2.0"
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[[tool.uv.index]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"

[tool.black]
target-version = ['py311']
line-length = 120
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | dist
  | tests
  | profiling
)/
'''

[tool.isort]
profile = "black"
py_version = 311
src_paths = ["dify_assistant", "tests"]
extend_skip = [".md", ".json"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
namespace_packages = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [""]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "I1101",  # c-extension-no-member
]

[tool.pytest.ini_options]
addopts = "-p no:warnings --doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "[%(asctime)s] %(process)d [%(levelname)s]: %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
norecursedirs = [
    ".tox",
    ".git",
    "*/migrations/*",
    "*/static/*",
    "docs",
    "venv",
    "*/dify_assistant/*",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
#select = ["E", "F"]
#select = ["ALL"]

[tool.hatchling]
include = ["CHANGELOG.md","LICENSE"]
packages = [{ include = "dify_assistant" }]

[project.scripts]
dify = "dify_assistant.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
